# nx-app-4

./: .replit  app.py  app_reference.py  aws_utils.py  aws_utils_new.py  azure_utils.py  cleanup_service.py  local_requirements.txt  models.py  pip-requirements.txt  pyproject.toml  replit.md  report_generator.py  report_generator_new.py  ssm_utils.py
components/: FrequencySelection.tsx
instance/: app.db
local_data/: .gitkeep  client_send2.json
templates/: report.html
